fake-zbi/data/manifest/zbi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zbi
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: zbi-proxy
  namespace: zbi
spec:
  routes:
    - conditions:
        - prefix: /
      pathRewritePolicy:
        replacePrefix:
          - replacement: /status
      services:
        - name: controller-zbi-svc
          port: 8080
  virtualhost:
    fqdn: api.zbitech.local
    tls:
      secretName: zbi-api-tls
---
apiVersion: v1
kind: Service
metadata:
  name: controller-zbi-svc
  namespace: zbi
spec:
  ports:
    - name: http-svc
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: grpc-svc
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app.kubernetes.io/instance: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zbi
    app.kubernetes.io/version: 1.16.0
    app.zbi.instance: controller
    helm.sh/chart: zbi-0.1.0
  type: ClusterIP
